@@ -423,24 +423,24 @@
 }
 
 @media (min-aspect-ratio: 2.1) {
- .np-cover-full .np-details-landscape-wide {
+ .np-full .np-details-landscape-wide {
   width:calc(100vw - (var(--np-image-landscape-wide-height) + var(--np-image-border) + var(--desktop-np-wide-pad))) !important;
  }
 
- .np-cover-full .np-image-landscape-wide {
+ .np-full .np-image-landscape-wide {
   padding-left:var(--desktop-np-wide-pad);
   width:calc(var(--np-image-landscape-wide-height) + var(--desktop-np-wide-pad));
  }
 
- .np-cover-full .np-image-landscape-wide .np-skip {
+ .np-full .np-image-landscape-wide .np-skip {
   left:calc(var(--np-image-border) + var(--desktop-np-wide-pad));
  }
 
- .np-cover-full .np-image-landscape-wide .np-emblem, .np-cover-full .np-image-landscape-wide .np-menu {
+ .np-full .np-image-landscape-wide .np-emblem, .np-full .np-image-landscape-wide .np-menu {
   left:calc((var(--np-image-landscape-wide-size) + var(--desktop-np-wide-pad)) - (var(--np-image-border) + (var(--np-image-btn-pad)*2)));
  }
 
- .np-cover-full .np-controls-wide {
+ .np-full .np-controls-wide {
   width:calc(100vw - (var(--np-image-landscape-wide-height) + var(--np-image-border) + var(--desktop-np-wide-pad)));
  }
 }
